Set NuGet package metadata

--- a/MatrixProfile/MatrixProfile.fsproj
+++ b/MatrixProfile/MatrixProfile.fsproj
@@ -3,6 +3,12 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
+    <Authors>Dylan Meysmans</Authors>
+    <Description>The matrix profile data structure and associated algorithms for mining time series data implemented in F#</Description>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <RepositoryUrl>https://github.com/mettekou/MatrixProfile.git</RepositoryUrl>
+    <RepositoryType>git</RepositoryType>
+    <MinVerTagPrefix>v</MinVerTagPrefix>
   </PropertyGroup>
 
   <ItemGroup>
