Add self join data structure

--- a/MatrixProfile/MatrixProfile.fsproj
+++ b/MatrixProfile/MatrixProfile.fsproj
@@ -13,6 +13,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Include="SelfJoin.fs" />
     <Compile Include="Mpx.fs" />
     <Compile Include="MatrixProfile.fs" />
   </ItemGroup>
