--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -20,7 +20,7 @@ jobs:
     - name: Restore tools
       run: dotnet tool restore
     - name: Restore dependencies
-      run: dotnet restore -c Release
+      run: dotnet restore
     - name: Build
       run: dotnet build -c Release --no-restore
     - name: Run fsdocs
