--- a/MatrixProfile/MatrixProfile.fsproj
+++ b/MatrixProfile/MatrixProfile.fsproj
@@ -7,7 +7,7 @@
     <Description>The matrix profile data structure and associated algorithms for mining time series data implemented in F#</Description>
     <Copyright>Copyright 2022 © Dylan Meysmans. All Rights Reserved.</Copyright>
     <PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
-    <RepositoryUrl>https://github.com/mettekou/MatrixProfile.git</RepositoryUrl>
+    <RepositoryUrl>https://github.com/mettekou/MatrixProfile</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
     <PublishRepositoryUrl>true</PublishRepositoryUrl>
     <EmbedUntrackedSources>true</EmbedUntrackedSources>
